Modified Static Page for Project Added image and text to match style of the personal page. Adjusted text to look more pleasing. On branch main Changes to be committed: new file:   Octicons-mark-github.svg modified:   index.html modified:   style.css

--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
       href="./style.css" />
   </head>
   <body>
-    <ul>
-      <li>
-        Personal page:
-        <a href="http://palmer81.github.io/palmer81/">
-          palmer81.github.io/palmer81
-        </a>
-      </li>
-    </ul>
+    <img
+      src="./Octicons-mark-github.svg"
+      alt="GitHub Icon" />
+    <h1 id="name">Scott Palmer</h1>
+    <div>
+      <h1>Projects</h1>
+      <ul>
+        <li>
+          Personal page:
+          <a href="http://palmer81.github.io/palmer81/">
+            palmer81.github.io/palmer81
+          </a>
+        </li>
+      </ul>
+      <h6>
+        If you are interested in commuicating about a project or technology,
+        please contact me @
+        <a href="mailto:palmer.sr@gmail.com">palmer.sr@gmail.com</a>
+      </h6>
+    </div>
   </body>
 </html>
