--- a/index.html
+++ b/index.html
@@ -24,6 +24,48 @@
             palmer81.github.io/palmer81
           </a>
         </li>
+        <li>
+          Projects page:
+          <a href=https://palmer81.github.io/">
+            palmer81.github.io
+          </a>
+        </li>
+        <li>
+          Blog for talk: 
+          <a href="https://darknight65.000webhostapp.com/">
+            darknight65.000webhostapp.com
+          </a>
+        </li>
+        <li>
+          Forum that's called TechGuppy:
+          <a href="http://darknight65.hyperphp.com/">
+            darknight65.hyperphp.com
+          </a>
+        </li>
+        <li>
+          RSVP Tooling eComerce:
+          <a href="http://darknight65.liveblog365.com/">
+            darknight65.liveblog365.com
+          </a>
+        </li>
+        <li>
+          Video Host: 
+          <a href="http://www.darknight65.byethost7.com/video/">
+            www.darknight65.byethost7.com/video
+          </a>
+        </li>
+        <li>
+          Static page in front of Video host: 
+          <a href="http://www.darknight65.byethost7.com/">
+            www.darknight65.byethost7.com
+          </a>
+        </li>
+        <li>
+          Blog: 
+          <a href="https://scottpalmercom.wordpress.com">
+            scottpalmercom.wordpress.com
+          </a>
+        </li>
       </ul>
       <h6>
         If you are interested in commuicating about a project or technology,
