--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
             scottpalmercom.wordpress.com
           </a>
         </li>
+        <li>
+          My Resume: 
+          <a href="https://palmer81.github.io/Resume/">
+            Resume
+          </a>
+        </li>
       </ul>
       <h6>
         If you are interested in commuicating about a project or technology,
