--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
           </a>
         </li>
         <li>
-          Projects page:
+          Project page:
+          <a href="https://github.com/palmer81">
+            palmer81.github.io/palmer81
+          </a>
+        </li>
+        <li>
+          GitHub page:
           <a href=https://palmer81.github.io/">
             palmer81.github.io
           </a>
