--- a/index.html
+++ b/index.html
@@ -16,74 +16,83 @@
       alt="GitHub Icon" />
     <h1 id="name">Scott Palmer</h1>
     <div>
-      <h1>Projects</h1>
-      <ul>
-        <li>
-          Personal page:
-          <a href="http://palmer81.github.io/palmer81/">
-            palmer81.github.io/palmer81
-          </a>
-        </li>
-        <li>
-          Project page:
-          <a href="https://github.com/palmer81">
-            palmer81.github.io/palmer81
-          </a>
-        </li>
-        <li>
-          GitHub page:
-          <a href=https://palmer81.github.io/">
-            palmer81.github.io
-          </a>
-        </li>
-        <li>
-          Blog for talk: 
-          <a href="https://darknight65.000webhostapp.com/">
-            darknight65.000webhostapp.com
-          </a>
-        </li>
-        <li>
-          Forum that's called TechGuppy:
-          <a href="http://darknight65.hyperphp.com/">
-            darknight65.hyperphp.com
-          </a>
-        </li>
-        <li>
-          RSVP Tooling eComerce:
-          <a href="http://darknight65.liveblog365.com/">
-            darknight65.liveblog365.com
-          </a>
-        </li>
-        <li>
-          Video Host: 
-          <a href="http://www.darknight65.byethost7.com/video/">
-            www.darknight65.byethost7.com/video
-          </a>
-        </li>
-        <li>
-          Static page in front of Video host: 
-          <a href="http://www.darknight65.byethost7.com/">
-            www.darknight65.byethost7.com
-          </a>
-        </li>
-        <li>
-          Blog: 
-          <a href="https://scottpalmercom.wordpress.com">
-            scottpalmercom.wordpress.com
-          </a>
-        </li>
-        <li>
-          My 
-          <a href="https://palmer81.github.io/Resume/">
-            Resume
-          </a>
-        </li>
-      </ul>
-      <h6>
-        If you are interested in commuicating about a project or technology,
-        please contact me @
-        <a href="mailto:palmer.sr@gmail.com">palmer.sr@gmail.com</a>
-      </h6>
-    </div>
+    <h1>Projects</h1>
+    <ul>
+      <li>
+        Personal page:
+        <a href="http://palmer81.github.io/palmer81/" target="_blank"
+          rel="noopener noreferrer">
+          palmer81.github.io/palmer81
+        </a>
+      </li>
+      <li>
+        Project page:
+        <a href="https://github.com/palmer81">
+          https://github.com/palmer81
+        </a>
+      </li>
+      <li>
+        GitHub page:
+        <a href="https://palmer81.github.io/" target="_blank"
+          rel="noopener noreferrer">
+          palmer81.github.io
+        </a>
+      </li>
+      <li>
+        Blog for talk:
+        <a href="https://darknight65.000webhostapp.com/" target="_blank"
+          rel="noopener noreferrer">
+          darknight65.000webhostapp.com
+        </a>
+      </li>
+      <li>
+        Forum that's called TechGuppy:
+        <a href="http://darknight65.hyperphp.com/" target="_blank"
+          rel="noopener noreferrer">
+          darknight65.hyperphp.com
+        </a>
+      </li>
+      <li>
+        RSVP Tooling eComerce:
+        <a href="http://darknight65.liveblog365.com/" target="_blank"
+          rel="noopener noreferrer">
+          darknight65.liveblog365.com
+        </a>
+      </li>
+      <li>
+        Video Host:
+        <a href="http://www.darknight65.byethost7.com/video/" target="_blank"
+          rel="noopener noreferrer">
+          www.darknight65.byethost7.com/video
+        </a>
+      </li>
+      <li>
+        Static page in front of Video host:
+        <a href="http://www.darknight65.byethost7.com/" target="_blank"
+          rel="noopener noreferrer">
+          www.darknight65.byethost7.com
+        </a>
+      </li>
+      <li>
+        Blog:
+        <a href="https://scottpalmercom.wordpress.com" target="_blank"
+          rel="noopener noreferrer">
+          scottpalmercom.wordpress.com
+        </a>
+      </li>
+      <li>
+        My
+        <a href="https://palmer81.github.io/Resume/" target="_blank"
+          rel="noopener noreferrer">
+          Resume
+        </a>
+      </li>
+    </ul>
+    <h6>
+      If you are interested in commuicating about a project or technology,
+      please contact me @
+      <a href="mailto:palmer.sr@gmail.com">palmer.sr@gmail.com</a>
+    </h6>
+  </div>
   </body>
 </html>
