--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <h6>
         If you are interested in commuicating about a project or technology,
         please contact me @
-        <a href="mailto:palmer.sr@gmail.com">palmer.sr@gmail.com</a>
+        <a href="mailto:palmer.sr@gmail.com">palmer.sr@gmail.com</a> or call me at 630-725-8112
       </h6>
     </div>
   </body>
