--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
       </ul>
       <h6>
         If you are interested in commuicating about a project or technology,
-        please contact me @
-        <a href="mailto:palmer.sr@gmail.com">palmer.sr@gmail.com</a> or call me at 630-725-8112
+        please contact me @ <a href="mailto:palmer.sr@gmail.com">palmer.sr@gmail.com</a> 
+        or call me at 630-725-8112. I will provide a free demonstration as soon as 
+        possible with request. I also will provide unlimited iterations with request.
       </h6>
     </div>
   </body>
