Make design change

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+  xmlns="http://www.w3.org/1999/xhtml"
+  xml:lang="en"
+  lang="en-us">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
-    <title>My Project Page</title>
+    <title>Project Page - Scott Palmer</title>
     <link
       rel="stylesheet"
       href="./style.css" />
@@ -15,116 +18,134 @@
       src="./Octicons-mark-github.svg"
       alt="GitHub Icon" />
     <h1 id="name">Scott Palmer</h1>
-    <div>
-      <h1>Projects</h1>
-      <ul>
-        <img
-          src="./cropped-Scott-Palmer.png"
-          alt="Picture of Scott Palmer (Me)"
-          class="profile" />
-        <li>
-          At Home Web Site:
-          <a
-            href="http://97.130.116.142:3000/"
-            target="_blank"
-            rel="noopener noreferrer">
-            http://97.130.116.142:3000/
-          </a>
-        </li>
-        <li>
-          Personal page:
-          <a
-            href="http://palmer81.github.io/palmer81/"
-            target="_blank"
-            rel="noopener noreferrer">
-            palmer81.github.io/palmer81
-          </a>
-        </li>
-        <li>
-          Project page:
-          <a href="https://github.com/palmer81">
-            https://github.com/palmer81
-          </a>
-        </li>
-        <li>
-          GitHub page:
-          <a
-            href="https://palmer81.github.io/"
-            target="_blank"
-            rel="noopener noreferrer">
-            palmer81.github.io
-          </a>
-        </li>
-        <li>
-          Blog for talk:
-          <a
-            href="https://darknight65.000webhostapp.com/"
-            target="_blank"
-            rel="noopener noreferrer">
-            darknight65.000webhostapp.com
-          </a>
-        </li>
-        <li>
-          Forum that's called TechGuppy:
-          <a
-            href="http://darknight65.hyperphp.com/"
-            target="_blank"
-            rel="noopener noreferrer">
-            darknight65.hyperphp.com
-          </a>
-        </li>
-        <li>
-          RSVP Tooling eComerce:
-          <a
-            href="http://darknight65.liveblog365.com/"
-            target="_blank"
-            rel="noopener noreferrer">
-            darknight65.liveblog365.com
-          </a>
-        </li>
-        <li>
-          Video Host:
-          <a
-            href="http://www.darknight65.byethost7.com/video/"
-            target="_blank"
-            rel="noopener noreferrer">
-            www.darknight65.byethost7.com/video
-          </a>
-        </li>
-        <li>
-          Static page in front of Video host:
-          <a
-            href="http://www.darknight65.byethost7.com/"
-            target="_blank"
-            rel="noopener noreferrer">
-            www.darknight65.byethost7.com
-          </a>
-        </li>
-        <li>
-          Blog:
-          <a
-            href="https://scottpalmercom.wordpress.com"
-            target="_blank"
-            rel="noopener noreferrer">
-            scottpalmercom.wordpress.com
-          </a>
-        </li>
-        <li>
-          My
-          <a
-            href="https://palmer81.github.io/Resume/"
-            target="_blank"
-            rel="noopener noreferrer">
-            Resume
-          </a>
-        </li>
-      </ul>
-      <h6>
-        If you are interested in commuicating about a project or technology,
-        please contact me @ <a href="mailto:palmer.sr@gmail.com">palmer.sr@gmail.com</a> 
-        or call me at 630-725-8112. I will provide a free demonstration as soon as 
-        possible with request. I also will provide unlimited iterations with request.
-      </h6>
-    </div>
+    <main>
+      <aside>
+        <a
+          href="https://techguppy.slack.com/"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./cropped-Scott-Palmer.png"
+            alt="Picture of Scott Palmer (Me)"
+            class="profile" />
+        </a>
+        <a href="https://palmer81.com/">Home</a>
+        <a
+          href="https://palmer81.com/resume/"
+          target="_blank"
+          rel="noopener noreferrer">
+          Resume
+        </a>
+      </aside>
+      <div>
+        <h1>Projects</h1>
+        <ul>
+          <li>
+            At Home Web Site:
+            <a
+              href="http://97.130.116.142:3000/"
+              target="_blank"
+              rel="noopener noreferrer">
+              http://97.130.116.142:3000/
+            </a>
+          </li>
+          <li>
+            Personal page:
+            <a
+              href="http://palmer81.github.io/palmer81/"
+              target="_blank"
+              rel="noopener noreferrer">
+              palmer81.github.io/palmer81
+            </a>
+          </li>
+          <li>
+            Project page:
+            <a href="https://github.com/palmer81">
+              https://github.com/palmer81
+            </a>
+          </li>
+          <li>
+            GitHub page:
+            <a
+              href="https://palmer81.github.io/"
+              target="_blank"
+              rel="noopener noreferrer">
+              palmer81.github.io
+            </a>
+          </li>
+          <li>
+            Blog for talk:
+            <a
+              href="https://darknight65.000webhostapp.com/"
+              target="_blank"
+              rel="noopener noreferrer">
+              darknight65.000webhostapp.com
+            </a>
+          </li>
+          <li>
+            Forum that's called TechGuppy:
+            <a
+              href="http://darknight65.hyperphp.com/"
+              target="_blank"
+              rel="noopener noreferrer">
+              darknight65.hyperphp.com
+            </a>
+          </li>
+          <li>
+            RSVP Tooling eComerce:
+            <a
+              href="http://darknight65.liveblog365.com/"
+              target="_blank"
+              rel="noopener noreferrer">
+              darknight65.liveblog365.com
+            </a>
+          </li>
+          <li>
+            Video Host:
+            <a
+              href="http://www.darknight65.byethost7.com/video/"
+              target="_blank"
+              rel="noopener noreferrer">
+              www.darknight65.byethost7.com/video
+            </a>
+          </li>
+          <li>
+            Static page in front of Video host:
+            <a
+              href="http://www.darknight65.byethost7.com/"
+              target="_blank"
+              rel="noopener noreferrer">
+              www.darknight65.byethost7.com
+            </a>
+          </li>
+          <li>
+            Blog:
+            <a
+              href="https://scottpalmercom.wordpress.com"
+              target="_blank"
+              rel="noopener noreferrer">
+              scottpalmercom.wordpress.com
+            </a>
+          </li>
+          <li>
+            My
+            <a
+              href="https://palmer81.github.io/Resume/"
+              target="_blank"
+              rel="noopener noreferrer">
+              Resume
+            </a>
+          </li>
+        </ul>
+        <h6>
+          If you are interested in commuicating about a project or technology,
+          please contact me @
+          <a href="mailto:palmer.sr@gmail.com">palmer.sr@gmail.com</a>
+          or call me at 630-725-8112. I will provide a free demonstration as
+          soon as possible with request. I also will provide unlimited
+          iterations with request.
+        </h6>
+      </div>
+    </main>
   </body>
 </html>
