--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
   xml:lang="en"
   lang="en-us">
   <head>
-    <meta charset="UTF-8" />
+    <link
+      href="http://gmpg.org/xfn/11"
+      rel="profile" />
+    <meta
+      http-equiv="content-type"
+      content="text/html; charset=utf-8" />
+    <meta
+      name="description"
+      content="Scott Palmer's GitHub Page for projects. These are porjects to highlight Scott's skills to find work. Free demostrations and links to projects and addtional information." />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
@@ -14,8 +22,10 @@
       href="./style.css" />
   </head>
   <body>
-    <a href="https://techguppy.slack.com/" target="_blank"
-    rel="noopener noreferrer">
+    <a
+      href="https://techguppy.slack.com/"
+      target="_blank"
+      rel="noopener noreferrer">
       <img
         src="./Octicons-mark-github.svg"
         alt="GitHub Icon" />
