--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <link
       rel="stylesheet"
       href="./style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://favicon.twenty.com/github.com/128"
+      type="image/x-icon" />
   </head>
   <body>
     <a
