Update links href

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             alt="Picture of Scott Palmer (Me)"
             class="profile" />
         </a>
-        <a href="https://palmer81.com/">Home</a>
+        <a href="https://palmer81.github.io/">Home</a>
         <a
-          href="https://palmer81.com/resume/"
+          href="https://palmer81.github.io/resume/"
           target="_blank"
           rel="noopener noreferrer">
           Resume
