--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="text/html; charset=utf-8" />
     <meta
       name="description"
-      content="Scott Palmer's GitHub Page for projects. These are porjects to highlight Scott's skills to find work. Free demostrations and links to projects and addtional information." />
+      content="Scott Palmer's GitHub Page for projects. These are projects to highlight Scott's skills to find work. Free demostrations and links to projects and addtional information." />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
