Several changes to included details and to link resources in simplier manner.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
       rel="shortcut icon"
       href="https://favicon.twenty.com/github.com/128"
       type="image/x-icon" />
+    <style>
+      div.title {
+        font-weight: bold;
+      }
+      @media only screen and (min-width: 600px) {
+        li.locationTime {
+          display: flex;
+          justify-content: space-between;
+        }
+      }
+    </style>
   </head>
   <body>
     <a
@@ -31,7 +42,7 @@
       target="_blank"
       rel="noopener noreferrer">
       <img
-        src="./Octicons-mark-github.svg"
+        src="./img/Octicons-mark-github.svg"
         alt="GitHub Icon" />
     </a>
     <h1 id="name">Scott Palmer</h1>
@@ -42,19 +53,92 @@
           target="_blank"
           rel="noopener noreferrer">
           <img
-            src="./cropped-Scott-Palmer.png"
+            src="./img/cropped-Scott-Palmer.png"
             alt="Picture of Scott Palmer (Me)"
             class="profile" />
         </a>
-        <a href="https://palmer81.github.io/">Home</a>
-        <a
-          href="https://palmer81.github.io/resume/"
-          target="_blank"
-          rel="noopener noreferrer">
-          Resume
-        </a>
+        <a href="./">Home</a>
+        <div style="display: inline-flex">
+          <a href="./resume/"> Resume </a>
+          <a
+            href="./pdf/"
+            download="Resume-ScottPalmer.pdf"
+            ><img
+              src="./img/file-arrow-down.svg"
+              alt="Download PDF"
+              style="height: fit-content; display: inline-block"
+          /></a>
+        </div>
       </aside>
       <div>
+        <div class="banner">
+          I am currently looking for work as a Software developer, Entry Level
+          Programmer, or Web Designer. I have knowledge with many lanuages and I
+          am proficent in Java, Javascript, HTML, CSS, PHP, Pearl, MySql, EDI
+          Mapping, C, and C++. Take a look at my
+          <a href="./resume/">resume</a>
+          as well as my projects for additional information.
+        </div>
+        <h1>About</h1>
+        <article>
+          Projects below are collection of links to active web sites that are
+          made available from several different hosts. Provided is a list of
+          their logos which link to their site for hosting details. Each provide
+          services in payments by month and year also they all have an interface
+          to interact with thier service. Currently these are hosted with a free
+          subscription and installed are websites that can be modified for sort
+          of demonstration.
+          <ul class="logos">
+            <li>
+              <a href="https://www.apachefriends.org/"
+                ><img
+                  src="./img/xampp-logo-ac950edf.svg"
+                  alt="XAMPP Apache + MariaDB + PHP + Perl"
+              /></a>
+            </li>
+            <li>
+              <a
+                href="https://pages.github.com/?(null)"
+                target="_blank"
+                rel="noopener noreferrer">
+                <img
+                  src="./img/Octicons-mark-github.svg"
+                  alt="GitHub Icon" />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://pages.github.com/?(null)"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  src="./img/000webhost-logo.svg"
+                  alt="000webhost powered by Hostinger"
+              /></a>
+            </li>
+            <li>
+              <a href="http://hyperphp.com/"
+                ><img
+                  src="./img/hyperphp-logo.jpg"
+                  alt="Grand Host Hosting Company Hyperphp.com"
+              /></a>
+            </li>
+            <li>
+              <a href="https://byet.host/"
+                ><img
+                  src="./img/byet-host-logo.png"
+                  alt="Byet Internet Services"
+              /></a>
+            </li>
+            <li>
+              <a href="https://wordpress.com/"
+                ><img
+                  src="./img/wordpress-logo.svg"
+                  alt="Wordpress powered"
+              /></a>
+            </li>
+          </ul>
+        </article>
         <h1>Projects</h1>
         <ul>
           <li>
@@ -146,12 +230,15 @@
           </li>
           <li>
             My
-            <a
-              href="https://palmer81.github.io/Resume/"
-              target="_blank"
-              rel="noopener noreferrer">
-              Resume
-            </a>
+            <a href="./resume/">Resume</a
+            ><a
+              href="./pdf/"
+              download="Resume-ScottPalmer.pdf"
+              ><img
+                src="./img/file-arrow-down.svg"
+                alt="Download PDF"
+                style="height: fit-content"
+            /></a>
           </li>
         </ul>
         <h6>
