Fixed broken link for resume download in resume/index.html

--- a/resume/index.html
+++ b/resume/index.html
@@ -56,7 +56,7 @@
         <div style="display: inline-flex">
           <a href="./resume/"> Resume </a>
           <a
-            href="./pdf/"
+            href="./../pdf/"
             download="Resume-ScottPalmer.pdf"
             ><img
               src="./../img/file-arrow-down.svg"
