Fixed links for host in the logo section to go to the correct host and to open in new tabs.

--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@
           of demonstration.
           <ul class="logos">
             <li>
-              <a href="https://www.apachefriends.org/"
-                ><img
+              <a
+                href="https://www.apachefriends.org/"
+                target="_blank"
+                rel="noopener noreferrer">
+                <img
                   src="./img/xampp-logo-ac950edf.svg"
                   alt="XAMPP Apache + MariaDB + PHP + Perl"
               /></a>
@@ -108,7 +111,7 @@
             </li>
             <li>
               <a
-                href="https://pages.github.com/?(null)"
+                href="https://www.000webhost.com/"
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
@@ -117,21 +120,30 @@
               /></a>
             </li>
             <li>
-              <a href="http://hyperphp.com/"
+              <a
+                href="http://hyperphp.com/"
+                target="_blank"
+                rel="noopener noreferrer"
                 ><img
                   src="./img/hyperphp-logo.jpg"
                   alt="Grand Host Hosting Company Hyperphp.com"
               /></a>
             </li>
             <li>
-              <a href="https://byet.host/"
+              <a
+                href="https://byet.host/"
+                target="_blank"
+                rel="noopener noreferrer"
                 ><img
                   src="./img/byet-host-logo.png"
                   alt="Byet Internet Services"
               /></a>
             </li>
             <li>
-              <a href="https://wordpress.com/"
+              <a
+                href="https://wordpress.com/"
+                target="_blank"
+                rel="noopener noreferrer"
                 ><img
                   src="./img/wordpress-logo.svg"
                   alt="Wordpress powered"
