Added contact informaiton

--- a/resume/index.html
+++ b/resume/index.html
@@ -37,7 +37,7 @@
       target="_blank"
       rel="noopener noreferrer">
       <img
-        src="./../img/Octicons-mark-github.svg"
+        src="./../../img/Octicons-mark-github.svg"
         alt="GitHub Icon" />
     </a>
     <h1 id="name">Scott Palmer</h1>
@@ -48,7 +48,7 @@
           target="_blank"
           rel="noopener noreferrer">
           <img
-            src="./../img/cropped-Scott-Palmer.png"
+            src="./../../img/cropped-Scott-Palmer.png"
             alt="Picture of Scott Palmer (Me)"
             class="profile" />
         </a>
@@ -59,11 +59,117 @@
             href="./../pdf/"
             download="Resume-ScottPalmer.pdf"
             ><img
-              src="./../img/file-arrow-down.svg"
+              src="./../../img/file-arrow-down.svg"
               alt="Download PDF"
               style="height: fit-content; display: inline-block"
           /></a>
         </div>
+
+        <h5 style="margin-block-end: 0">Contact Me</h5>
+        <h6 style="margin-block-start: 0; margin-block-end: 0">Email</h6>
+        <a
+          href="mailto:palmer.sr@gmail.com"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./../img/Gmail-Logo.png"
+            class="sideLogo" />
+        </a>
+        <a
+          href="mailto:palmer.sr@outlook.com"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./../img/Outlook-Logo.png"
+            class="sideLogo" />
+        </a>
+        <a
+          href="mailto:spalms65@hotmail.com"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./../img/Hotmail-Logo.png"
+            class="sideLogo" />
+        </a>
+        <a
+          href="mailto:spalms65@siu.edu"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./../img/Southern-Illinois-Salukis-Logo.png"
+            class="sideLogo" />
+        </a>
+        <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
+          Freelance
+        </h6>
+        <a
+          href="https://www.fiverr.com/scott_r_palmer?public_mode=true"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./../img/fiverr-logo.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
+        <h6 style="margin-block-start: 0.97em; margin-block-end: 0">Chat</h6>
+        <a
+          href="https://techguppy.slack.com/"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./../img/slack-logo.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
+        <a
+          href="https://discord.com/users/826821172414513173"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./../img/Discord-logo.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
+        <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
+          Social Network
+        </h6>
+        <a
+          href="https://www.facebook.com/palmer.sr"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./../img/Linkedin-logo.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
+        <a
+          href="https://www.linkedin.com/in/scott-palmer-89549939/"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./../img/Facebook_logo_PNG9.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
+        <a
+          href="https://twitter.com/palmersr10"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./../img/Twitter-Logo.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
+        <h6 style="margin-block-start: 0.97em; margin-block-end: 0">Coding</h6>
+        <a
+          href="https://github.com/palmer81"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./../img/GitHub-Logo.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
       </aside>
       <div style="margin: auto; max-width: 900px">
         <div style="text-align: right; font-size: x-large; font-weight: bold">
