--- a/index.html
+++ b/index.html
@@ -69,6 +69,111 @@
               style="height: fit-content; display: inline-block"
           /></a>
         </div>
+        <h5 style="margin-block-end: 0">Contact Me</h5>
+        <h6 style="margin-block-start: 0; margin-block-end: 0">Email</h6>
+        <a
+          href="mailto:palmer.sr@gmail.com"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./img/Gmail-Logo.png"
+            class="sideLogo" />
+        </a>
+        <a
+          href="mailto:palmer.sr@outlook.com"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./img/Outlook-Logo.png"
+            class="sideLogo" />
+        </a>
+        <a
+          href="mailto:spalms65@hotmail.com"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./img/Hotmail-Logo.png"
+            class="sideLogo" />
+        </a>
+        <a
+          href="mailto:spalms65@siu.edu"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./img/Southern-Illinois-Salukis-Logo.png"
+            class="sideLogo" />
+        </a>
+        <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
+          Freelance
+        </h6>
+        <a
+          href="https://www.fiverr.com/scott_r_palmer?public_mode=true"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./img/fiverr-logo.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
+        <h6 style="margin-block-start: 0.97em; margin-block-end: 0">Chat</h6>
+        <a
+          href="https://techguppy.slack.com/"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./img/slack-logo.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
+        <a
+          href="https://discord.com/users/826821172414513173"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./img/Discord-logo.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
+        <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
+          Social Network
+        </h6>
+        <a
+          href="https://www.facebook.com/palmer.sr"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./img/Linkedin-logo.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
+        <a
+          href="https://www.linkedin.com/in/scott-palmer-89549939/"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./img/Facebook_logo_PNG9.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
+        <a
+          href="https://twitter.com/palmersr10"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./img/Twitter-Logo.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
+        <h6 style="margin-block-start: 0.97em; margin-block-end: 0">Coding</h6>
+        <a
+          href="https://github.com/palmer81"
+          target="_blank"
+          rel="noopener noreferrer">
+          <img
+            src="./img/GitHub-Logo.png"
+            alt="Fiverr Profile"
+            class="sideLogo" />
+        </a>
       </aside>
       <div>
         <div class="banner">
@@ -77,17 +182,24 @@
           am proficent in Java, Javascript, HTML, CSS, PHP, Pearl, MySql, EDI
           Mapping, C, and C++. Take a look at my
           <a href="./resume/">resume</a>
-          as well as my projects for additional information.
+          as well as my projects for additional information.<br /><br />
+          I am also currently looking for work as freelance programmer. I will
+          do contacts for building web sites from scratch or refactor existing
+          projects. I am interested in any sort work such as fixing bugs,
+          refactoring, commentting and data entry. Please use my contacts found
+          on the left to reach out to me.
         </div>
         <h1>About</h1>
         <article>
-          Projects below are collection of links to active web sites that are
-          made available from several different hosts. Provided is a list of
-          their logos which link to their site for hosting details. Each provide
-          services in payments by month and year also they all have an interface
-          to interact with thier service. Currently these are hosted with a free
-          subscription and installed are websites that can be modified for sort
-          of demonstration.
+          <div>
+            Projects below are collection of links to active web sites that are
+            made available from several different hosts. Provided is a list of
+            their logos which link to their site for hosting details. Each
+            provide services in payments by month and year also they all have an
+            interface to interact with thier service. Currently these are hosted
+            with a free subscription and installed are websites that can be
+            modified for any sort of demonstration.
+          </div>
           <ul class="logos">
             <li>
               <a
@@ -125,7 +237,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="./img/hyperphp-logo.jpg"
+                  src="./img/hyperphp-logo.png"
                   alt="Grand Host Hosting Company Hyperphp.com"
               /></a>
             </li>
