Change resume Career focus

--- a/resume/index.html
+++ b/resume/index.html
@@ -185,8 +185,9 @@
         <div class="title">Career Focus</div>
         <ul style="list-style-type: none">
           <li>
-            To obtain freelance work creating a web site with bootstrap features
-            for commmerce and description of products/company
+            To obtain a programming position with a company that prides itself
+            in communication and delivering exceptional products with CI/CD and
+            automation.
           </li>
         </ul>
 
