Fixed broken link for resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -54,7 +54,7 @@
         </a>
         <a href="./../">Home</a>
         <div style="display: inline-flex">
-          <a href="./resume/"> Resume </a>
+          <a href="./"> Resume </a>
           <a
             href="./../pdf/"
             download="Resume-ScottPalmer.pdf"
