Fixed gramatical errors

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <h1>About</h1>
         <article>
           <div>
-            Projects below are collection of links to active web sites that are
+            Projects below are a collection of links to active sites that are
             made available from several different hosts. Provided is a list of
             their logos which link to their site for hosting details. Each
             provide services in payments by month and year also they all have an
