Changed the resume download to link to GitHub location. Added twitter follow and post buttons.

--- a/resume/index.html
+++ b/resume/index.html
@@ -56,8 +56,7 @@
         <div style="display: inline-flex">
           <a href="./"> Resume </a>
           <a
-            href="./../pdf/"
-            download="Resume-ScottPalmer.pdf"
+            href="https://github.com/palmer81/palmer81.github.io/blob/main/pdf/Resume-ScottPalmer.pdf"
             ><img
               src="./../../img/file-arrow-down.svg"
               alt="Download PDF"
