--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <a
-      href="https://techguppy.slack.com/"
+      href="https://palmer81.github.io/"
       target="_blank"
       rel="noopener noreferrer">
       <img
@@ -61,8 +61,7 @@
         <div style="display: inline-flex">
           <a href="./resume/"> Resume </a>
           <a
-            href="./pdf/"
-            download="Resume-ScottPalmer.pdf"
+            href="https://github.com/palmer81/palmer81.github.io/blob/main/pdf/Resume-ScottPalmer.pdf"
             ><img
               src="./img/file-arrow-down.svg"
               alt="Download PDF"
@@ -77,7 +76,8 @@
           rel="noopener noreferrer">
           <img
             src="./img/Gmail-Logo.png"
-            class="sideLogo" />
+            class="sideLogo"
+            alt="Gmail" />
         </a>
         <a
           href="mailto:palmer.sr@outlook.com"
@@ -85,7 +85,8 @@
           rel="noopener noreferrer">
           <img
             src="./img/Outlook-Logo.png"
-            class="sideLogo" />
+            class="sideLogo"
+            alt="Outlook" />
         </a>
         <a
           href="mailto:spalms65@hotmail.com"
@@ -93,7 +94,8 @@
           rel="noopener noreferrer">
           <img
             src="./img/Hotmail-Logo.png"
-            class="sideLogo" />
+            class="sideLogo"
+            alt="Hotmail" />
         </a>
         <a
           href="mailto:spalms65@siu.edu"
@@ -101,7 +103,8 @@
           rel="noopener noreferrer">
           <img
             src="./img/Southern-Illinois-Salukis-Logo.png"
-            class="sideLogo" />
+            class="sideLogo"
+            alt="Saluki SIU Carbondale, IL" />
         </a>
         <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
           Freelance
@@ -122,7 +125,7 @@
           rel="noopener noreferrer">
           <img
             src="./img/slack-logo.png"
-            alt="Fiverr Profile"
+            alt="Slack Profile"
             class="sideLogo" />
         </a>
         <a
@@ -131,7 +134,7 @@
           rel="noopener noreferrer">
           <img
             src="./img/Discord-logo.png"
-            alt="Fiverr Profile"
+            alt="Discord Profile"
             class="sideLogo" />
         </a>
         <h6 style="margin-block-start: 0.97em; margin-block-end: 0">
@@ -143,7 +146,7 @@
           rel="noopener noreferrer">
           <img
             src="./img/Linkedin-logo.png"
-            alt="Fiverr Profile"
+            alt="LinkedIn Profile"
             class="sideLogo" />
         </a>
         <a
@@ -152,7 +155,7 @@
           rel="noopener noreferrer">
           <img
             src="./img/Facebook_logo_PNG9.png"
-            alt="Fiverr Profile"
+            alt="Facebook Profile"
             class="sideLogo" />
         </a>
         <a
@@ -161,9 +164,31 @@
           rel="noopener noreferrer">
           <img
             src="./img/Twitter-Logo.png"
-            alt="Fiverr Profile"
+            alt="Twitter Profile"
             class="sideLogo" />
         </a>
+        <div class="twitter">
+          <a
+            href="https://twitter.com/twitter?ref_src=twsrc%5Etfw"
+            class="twitter-follow-button"
+            data-show-count="false"
+            >Follow @twitter</a
+          >
+          <script
+            async
+            src="https://platform.twitter.com/widgets.js"
+            charset="utf-8"></script>
+          <a
+            href="https://twitter.com/intent/tweet?screen_name=twitter&ref_src=twsrc%5Etfw"
+            class="twitter-mention-button"
+            data-show-count="false"
+            >Tweet to @twitter</a
+          >
+          <script
+            async
+            src="https://platform.twitter.com/widgets.js"
+            charset="utf-8"></script>
+        </div>
         <h6 style="margin-block-start: 0.97em; margin-block-end: 0">Coding</h6>
         <a
           href="https://github.com/palmer81"
