Added keywords with meta tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       href="http://gmpg.org/xfn/11"
       rel="profile" />
     <meta
+      name="keywords"
+      content="Scott Palmer, Scott Robert Palmer, Software Design, Freelance, Freelancer, Freelancing, Programming, Java, Javascript, HTML, CSS, PHP, Pearl, C, C++, Cpluplus, Web Design, Web Designer, Programmer, Contract, OpenSource, GNU, Open Source, demonstration, CI/CD, Help Desk, IT Professional, Refactoring, Commenting, Debugging" />
+    <meta
       http-equiv="content-type"
       content="text/html; charset=utf-8" />
     <meta
