Added more keywords

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="profile" />
     <meta
       name="keywords"
-      content="Scott Palmer, Scott Robert Palmer, Software Design, Freelance, Freelancer, Freelancing, Programming, Java, Javascript, HTML, CSS, PHP, Pearl, C, C++, Cpluplus, Web Design, Web Designer, Programmer, Contract, OpenSource, GNU, Open Source, demonstration, CI/CD, Help Desk, IT Professional, Refactoring, Commenting, Debugging" />
+      content="Scott Palmer, Scott Robert Palmer, Scott R Palmer, Software Design, Software Designer, Software Enigneer, Software Programmer, Sotfware, Freelance, Freelancer, Freelancing, Programming, Java, Javascript, HTML, CSS, PHP, Pearl, C, C++, Cpluplus, Web Design, Web Designer, Programmer, Contract, OpenSource, GNU, Open Source, demonstration, CI/CD, Help Desk, IT Professional, Refactoring, Commenting, Debugging, Computer Science, Computer, Linux, Windows, MacOs, iphone, ipad, andriod, Mandriva, RedHat, MySql, SQL, Computer Security, Security, Interface, React, React.js, Next, Next.js, js, VS, VisualStudio Code, GitHub, Git" />
     <meta
       http-equiv="content-type"
       content="text/html; charset=utf-8" />
