--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@
       content="Scott Palmer's Resume -  Currently in the market for and IT job which can be help desk I would prefer software design or entry level programmings. My resume highights most of my skills, please me know if you like a demostration of any skill." />
     <meta
       name="keywords"
-      content="Scott Palmer, Scott Robert Palmer, Software Design, Freelance, Freelancer, Freelancing, Programming, Java, Javascript, HTML, CSS, PHP, Pearl, C, C++, Cpluplus, Web Design, Web Designer, Programmer, Contract, OpenSource, GNU, Open Source, demonstration, CI/CD, Help Desk, IT Professional, Refactoring, Commenting, Debugging" />
+      content="Scott Palmer, Scott Robert Palmer, Scott R Palmer, Software Design, Software Designer, Software Enigneer, Software Programmer, Sotfware, Freelance, Freelancer, Freelancing, Programming, Java, Javascript, HTML, CSS, PHP, Pearl, C, C++, Cpluplus, Web Design, Web Designer, Programmer, Contract, OpenSource, GNU, Open Source, demonstration, CI/CD, Help Desk, IT Professional, Refactoring, Commenting, Debugging, Computer Science, Computer, Linux, Windows, MacOs, iphone, ipad, andriod, Mandriva, RedHat, MySql, SQL, Computer Security, Security, Interface, React, React.js, Next, Next.js, js, VS, VisualStudio Code, GitHub, Git" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
